Add user.is_authenticated in template

--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/d9e99fb3b3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static '/css/profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
     <title>Online Auction</title>
 </head>
 
