--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -70,7 +70,7 @@
                                         <a href="#">Game</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="{% url 'products:products_list' %}">All products</a>
+                                        <a href="{% url 'products:product_list' %}">All products</a>
                                     </li>
                                     <div class="arrow"></div>
                                 </ul>
